--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   h2:
     console:
       enable: true
@@ -8,3 +11,16 @@ spring:
     url: jdbc:h2:~/local
     username: sa
     password: sa
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+
+logging:
+  level:
+    root: ERROR
+    org.springframework.web: ERROR
+    com.oms: DEBUG
+    org.hibernate.SQL: DEBUG
