--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,10 +7,10 @@ spring:
       enable: true
       path: /h2-console
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/local
+    url: jdbc:h2:mem:local
     username: sa
-    password: sa
+    password: test
+    driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: create
