--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,13 +10,13 @@ spring:
       enable: true
       path: /h2-console
   datasource:
-    url: jdbc:h2:mem:local
+    url: jdbc:h2:file:~/h2/oms/user
     username: sa
     password: test
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
