--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
       enable: true
       path: /h2-console
   datasource:
-    url: jdbc:h2:file:~/h2/oms/user
+    url: jdbc:h2:file:~/Dev/h2/oms/user
     username: sa
     password: test
     driver-class-name: org.h2.Driver
